fix overflow bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,12 +3,17 @@ body{
     width: 100%;
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    
+}
+
+html, body {
+    margin: 0; height: 100%; overflow: hidden
 }
 
 
+/*MENU*/
+
 .menu-container{
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-image: url("images/test2.jpg");
     background-position: center 0%;
@@ -34,7 +39,6 @@ body{
     position: fixed;
     z-index: 3;
     left: 50%;
-    right: 50%;
     top: 84%;
     transform: translateX(-50%);
     background: #C45BAA;
@@ -47,6 +51,8 @@ body{
     transition-property: transform;
     transition-duration: 200ms;
 }
+
+
 
 .nav-toggle:hover{
     transform: translateX(-50%) scale(1.05);
@@ -81,37 +87,71 @@ body{
 
 
 
+
+/*NAVIGATION*/
+
+
+nav{
+    height: 50vh;
+    width: 100%;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.nav-item-title {
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+}
+
+
 .nav-link-img{
-    width: max(20vh, 400px);
+    width: max(15vw, 325px);
     aspect-ratio: 1.8/ 1;
     margin-top: 0.75rem;
     object-fit: cover;
     border-radius: 0.5rem;
-    
 }
 
-.navbar-container{
-    height: 50vh;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 1;
-}
-
-.nav-links > h2 {
-    margin: 0;
-}
 
 .nav-links{
     display: flex;
     gap: clamp(1rem, 2vw, 2rem);
-    margin-top: clamp(2rem, 2vw, 3rem);
     padding: 0rem clamp(1rem 2vw, 2rem);
     transform: translateY(70%) scale(0.9);
     transition: transform 500ms cubic-bezier(.13, .53, .38, .97);
+    width: 100vw;
+    justify-content: space-around;
+    margin-bottom: -1rem;
+    height: 50vh;
+    overflow: hidden;
 }
 
-.nav-links.open{
-    transform: translateY(0);
+.nav-item > a {
+    text-decoration: none;
+    color: black;
+    margin-top: 200px;
 }
+
+.nav-item:hover .nav-link-img {
+    transform: scale(.97);
+    transition-timing-function: ease;
+    transition-duration: 400ms;
+}
+
+
+.nav-item:hover .nav-item-title {
+    transform: translateX(5%);
+    transition-timing-function: ease;
+    transition-duration: 300ms;
+}
+
+
+.nav-links.open{
+    transform: translateY(0%) scale(1);
+}
+
+
